<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Pera Wallet, LDA
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_fragment_primary_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/bottom_safe_area_margin">

    <View
        android:id="@+id/modalityLineView"
        style="@style/BottomSheetModalityLine"
        android:layout_marginTop="@dimen/spacing_small" />

    <com.algorand.android.customviews.ListMenuItemView
        android:id="@+id/buySellButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:layout_marginBottom="@dimen/spacing_large"
        app:description="@string/see_all_options_to_buy"
        app:icon="@drawable/ic_buy_sell"
        app:title="@string/buy_sell" />

    <com.algorand.android.customviews.ListMenuItemView
        android:id="@+id/swapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:visibility="gone"
        app:description="@string/convert_between_popular_asa_pairs"
        app:icon="@drawable/ic_swap_helper_button_bg_gray"
        app:title="@string/swap"
        tools:visibility="visible" />

    <com.algorand.android.customviews.ListMenuItemView
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        app:description="@string/algo_or_any_asa"
        app:icon="@drawable/ic_send_helper_button_bg_gray"
        app:title="@string/send" />

    <com.algorand.android.customviews.ListMenuItemView
        android:id="@+id/receiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        app:description="@string/view_or_copy"
        app:icon="@drawable/ic_qr_helper_button_bg_gray"
        app:title="@string/receive" />

    <com.algorand.android.customviews.ListMenuItemView
        android:id="@+id/addNewAssetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        app:description="@string/opt_in_to"
        app:icon="@drawable/ic_add_helper_button"
        app:title="@string/add_new_asa" />

    <com.algorand.android.customviews.ListMenuItemView
        android:id="@+id/moreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        app:description="@string/show_more_actions"
        app:icon="@drawable/ic_more_helper_button_bg_grey"
        app:title="@string/more" />

</LinearLayout>
