<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Pera Wallet, LDA
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/scene_core_actions_tab_bar"
    tools:parentTag="androidx.constraintlayout.motion.widget.MotionLayout">

    <View
        android:id="@+id/backgroundColorView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_bottom_navigation_height"
        android:background="@color/black_alpha_64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/coreActionsContainerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_bottom_navigation_height"
        android:background="@drawable/bottom_sheet_dialog_fragment_primary_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_height="wrap_content">

        <com.algorand.android.customviews.ListMenuItemView
            android:id="@+id/buySellButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxxxlarge"
            android:layout_marginBottom="@dimen/spacing_large"
            app:description="@string/see_all_options_to_buy"
            app:icon="@drawable/ic_buy_sell"
            app:title="@string/buy_sell" />

        <com.algorand.android.customviews.ListMenuItemView
            android:id="@+id/swapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            app:description="@string/convert_between_popular_asa_pairs"
            app:icon="@drawable/ic_swap_helper_button_bg_gray"
            app:title="@string/swap" />

        <com.algorand.android.customviews.ListMenuItemView
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            app:description="@string/algo_or_any_asa"
            app:icon="@drawable/ic_send_helper_button_bg_gray"
            app:title="@string/send" />

        <com.algorand.android.customviews.ListMenuItemView
            android:id="@+id/receiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            app:description="@string/view_or_copy"
            app:icon="@drawable/ic_receive_helper_button"
            app:title="@string/receive" />

        <com.algorand.android.customviews.ListMenuItemView
            android:id="@+id/scanQrButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_xxxxlarge"
            app:description="@string/use_wallet_connect"
            app:icon="@drawable/ic_qr_scan_helper_button"
            app:title="@string/scan_qr_code" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/coreActionsButton"
        style="@style/IconButton.Circle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/spacing_xsmall"
        android:enabled="false"
        app:backgroundTint="@color/button_helper_bg"
        app:icon="@drawable/ic_pera"
        app:iconTint="@color/button_helper_pera_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@null" />

</merge>
