<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Pera Wallet, LDA
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_xlarge"
    android:paddingVertical="@dimen/spacing_large">

    <com.algorand.android.customviews.PeraRadioButton
        android:id="@+id/alphabeticallyAscendingRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphabetically_a_to_z" />

    <com.algorand.android.customviews.PeraRadioButton
        android:id="@+id/alphabeticallyDescendingRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alphabetically_z_to_a" />

    <com.algorand.android.customviews.PeraRadioButton
        android:id="@+id/balanceDescendingRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highest_value_to_lowest" />

    <com.algorand.android.customviews.PeraRadioButton
        android:id="@+id/balanceAscendingRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lowest_value_to_highest" />

</LinearLayout>
