<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Algorand, Inc.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/white">

    <com.algorand.android.customviews.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height" />

    <View
        style="@style/HorizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_horizontal_spacing"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/publicsans_semibold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/what_does_asset" />

    <TextView
        android:id="@+id/firstParagraphTextView"
        style="@style/TextAppearance.VerifiedAssetsParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verified_assets_first_paragraph" />

    <TextView
        style="@style/TextAppearance.VerifiedAssetsParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verified_assets_second_paragraph" />

    <TextView
        android:id="@+id/thirdParagraphTextView"
        style="@style/TextAppearance.VerifiedAssetsParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/verified_assets_third_paragraph" />

    <TextView
        android:id="@+id/fourthParagraphTextView"
        style="@style/TextAppearance.VerifiedAssetsParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/verified_assets_fourth_paragraph" />


</LinearLayout>
