<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Algorand, Inc.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/keyline_1_minus_8dp"
    android:paddingTop="12dp"
    android:paddingBottom="@dimen/bottom_safe_area_margin"
    tools:background="@color/secondaryBackground">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rekeyButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
        android:text="@string/rekey_account"
        android:visibility="gone"
        app:icon="@drawable/ic_rekey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authAddressButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
        android:text="@string/auth_account_address"
        android:visibility="gone"
        app:icon="@drawable/ic_show_qr" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/removeAssetButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
        android:text="@string/remove_assets"
        android:visibility="gone"
        app:icon="@drawable/ic_trash" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewPassphraseButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
        android:text="@string/view_passphrase"
        android:visibility="gone"
        app:icon="@drawable/ic_lock" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notificationButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
        android:text="@string/mute_notifications"
        android:visibility="gone"
        app:icon="@drawable/ic_empty_notification" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accountNameButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1_minus_8dp"
        android:text="@string/edit_account_name"
        app:icon="@drawable/ic_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/removeAccountButton"
        style="@style/TextButton.Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_account"
        android:textColor="@color/red_E9"
        app:icon="@drawable/ic_remove_account"
        app:iconTint="@null"
        app:rippleColor="@color/red_E9_alpha_10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/UnelevatedButton.General.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/keyline_1_minus_8dp"
        android:layout_marginTop="@dimen/keyline_1"
        android:text="@string/cancel"
        android:textColor="@color/gray_8A"
        android:textSize="14sp"
        app:rippleColor="@color/gray_BE" />

</LinearLayout>
